System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06
Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-16 21:19, hash: rB09045ff64d1f, 2.91.0 (issue was introduced in rB042143440d7668d3e357805ffdd20b1a4d2e2975)
Worked: versions prior to the referenced commit
Short description of error
When a lattice object has used vertex groups (when the edges turn bright white),
if the object's Lattice Vertex Group is assign to a vertex group, and you try to change the resolution from edit mode, blender will crash.
Exact steps for others to reproduce the error
[Attached .blend file]:
Change the lattice's Resolution U/V/W, while still in edit mode
[Based on the default startup]:
Add a lattice object.
Add a Vertex group to it.
In the Lattice panel (with the resolution sliders), assign the vertex group.
Go into edit mode and click [Assign] in the Vertex Groups panel (you don't have to click any vertices).
Change any of the resolution sliders.